// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bucket is public 1`] = `
"{
  \\"resource\\": {
    \\"azurerm_resource_group\\": {
      \\"root_ResourceGroup_72A9AFB6\\": {
        \\"location\\": \\"East US\\",
        \\"name\\": \\"Default-c82bf964\\"
      }
    },
    \\"azurerm_storage_account\\": {
      \\"root_StorageAccount_3B92EC74\\": {
        \\"account_replication_type\\": \\"LRS\\",
        \\"account_tier\\": \\"Standard\\",
        \\"location\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.location}\\",
        \\"name\\": \\"defaultc82bf964\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.name}\\"
      }
    },
    \\"azurerm_storage_container\\": {
      \\"root_mybucket_Bucket_10512A98\\": {
        \\"container_access_type\\": \\"public\\",
        \\"name\\": \\"my-bucket-c8045fcc\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\"
      }
    }
  }
}"
`;

exports[`bucket is public 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Default": Object {
            "children": Object {
              "ResourceGroup": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.resourceGroup.ResourceGroup",
                  "version": "5.0.1",
                },
                "id": "ResourceGroup",
                "path": "root/Default/ResourceGroup",
              },
              "StorageAccount": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.storageAccount.StorageAccount",
                  "version": "5.0.1",
                },
                "id": "StorageAccount",
                "path": "root/Default/StorageAccount",
              },
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "azure": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.provider.AzurermProvider",
                  "version": "5.0.1",
                },
                "id": "azure",
                "path": "root/Default/azure",
              },
              "my_bucket": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Bucket": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-azurerm.storageContainer.StorageContainer",
                      "version": "5.0.1",
                    },
                    "id": "Bucket",
                    "path": "root/Default/my_bucket/Bucket",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket name valid 1`] = `
"{
  \\"resource\\": {
    \\"azurerm_resource_group\\": {
      \\"root_ResourceGroup_72A9AFB6\\": {
        \\"location\\": \\"East US\\",
        \\"name\\": \\"Default-c82bf964\\"
      }
    },
    \\"azurerm_storage_account\\": {
      \\"root_StorageAccount_3B92EC74\\": {
        \\"account_replication_type\\": \\"LRS\\",
        \\"account_tier\\": \\"Standard\\",
        \\"location\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.location}\\",
        \\"name\\": \\"defaultc82bf964\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.name}\\"
      }
    },
    \\"azurerm_storage_container\\": {
      \\"root_TheUncannyBucket_DDA021FB\\": {
        \\"container_access_type\\": \\"private\\",
        \\"name\\": \\"the-uncanny-bucket-c8ac4720\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\"
      }
    }
  }
}"
`;

exports[`bucket name valid 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Default": Object {
            "children": Object {
              "ResourceGroup": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.resourceGroup.ResourceGroup",
                  "version": "5.0.1",
                },
                "id": "ResourceGroup",
                "path": "root/Default/ResourceGroup",
              },
              "StorageAccount": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.storageAccount.StorageAccount",
                  "version": "5.0.1",
                },
                "id": "StorageAccount",
                "path": "root/Default/StorageAccount",
              },
              "The-Uncanny-Bucket": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Bucket": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-azurerm.storageContainer.StorageContainer",
                      "version": "5.0.1",
                    },
                    "id": "Bucket",
                    "path": "root/Default/The-Uncanny-Bucket/Bucket",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "The-Uncanny-Bucket",
                "path": "root/Default/The-Uncanny-Bucket",
              },
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "azure": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.provider.AzurermProvider",
                  "version": "5.0.1",
                },
                "id": "azure",
                "path": "root/Default/azure",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket with two preflight objects 1`] = `
"{
  \\"resource\\": {
    \\"azurerm_resource_group\\": {
      \\"root_ResourceGroup_72A9AFB6\\": {
        \\"location\\": \\"East US\\",
        \\"name\\": \\"Default-c82bf964\\"
      }
    },
    \\"azurerm_storage_account\\": {
      \\"root_StorageAccount_3B92EC74\\": {
        \\"account_replication_type\\": \\"LRS\\",
        \\"account_tier\\": \\"Standard\\",
        \\"location\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.location}\\",
        \\"name\\": \\"defaultc82bf964\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.name}\\"
      }
    },
    \\"azurerm_storage_blob\\": {
      \\"root_mybucket_Blobfile1txt_5100BBF1\\": {
        \\"name\\": \\"file1.txt\\",
        \\"source_content\\": \\"hello world\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\",
        \\"storage_container_name\\": \\"\${azurerm_storage_container.root_mybucket_Bucket_10512A98.name}\\",
        \\"type\\": \\"Block\\"
      },
      \\"root_mybucket_Blobfile2txt_D2544996\\": {
        \\"name\\": \\"file2.txt\\",
        \\"source_content\\": \\"boom bam\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\",
        \\"storage_container_name\\": \\"\${azurerm_storage_container.root_mybucket_Bucket_10512A98.name}\\",
        \\"type\\": \\"Block\\"
      }
    },
    \\"azurerm_storage_container\\": {
      \\"root_mybucket_Bucket_10512A98\\": {
        \\"container_access_type\\": \\"public\\",
        \\"name\\": \\"my-bucket-c8045fcc\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\"
      }
    }
  }
}"
`;

exports[`bucket with two preflight objects 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Default": Object {
            "children": Object {
              "ResourceGroup": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.resourceGroup.ResourceGroup",
                  "version": "5.0.1",
                },
                "id": "ResourceGroup",
                "path": "root/Default/ResourceGroup",
              },
              "StorageAccount": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.storageAccount.StorageAccount",
                  "version": "5.0.1",
                },
                "id": "StorageAccount",
                "path": "root/Default/StorageAccount",
              },
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "azure": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.provider.AzurermProvider",
                  "version": "5.0.1",
                },
                "id": "azure",
                "path": "root/Default/azure",
              },
              "my_bucket": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Blob-file1.txt": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-azurerm.storageBlob.StorageBlob",
                      "version": "5.0.1",
                    },
                    "id": "Blob-file1.txt",
                    "path": "root/Default/my_bucket/Blob-file1.txt",
                  },
                  "Blob-file2.txt": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-azurerm.storageBlob.StorageBlob",
                      "version": "5.0.1",
                    },
                    "id": "Blob-file2.txt",
                    "path": "root/Default/my_bucket/Blob-file2.txt",
                  },
                  "Bucket": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-azurerm.storageContainer.StorageContainer",
                      "version": "5.0.1",
                    },
                    "id": "Bucket",
                    "path": "root/Default/my_bucket/Bucket",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`create a bucket 1`] = `
"{
  \\"resource\\": {
    \\"azurerm_resource_group\\": {
      \\"root_ResourceGroup_72A9AFB6\\": {
        \\"location\\": \\"East US\\",
        \\"name\\": \\"Default-c82bf964\\"
      }
    },
    \\"azurerm_storage_account\\": {
      \\"root_StorageAccount_3B92EC74\\": {
        \\"account_replication_type\\": \\"LRS\\",
        \\"account_tier\\": \\"Standard\\",
        \\"location\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.location}\\",
        \\"name\\": \\"defaultc82bf964\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.name}\\"
      }
    },
    \\"azurerm_storage_container\\": {
      \\"root_mybucket_Bucket_10512A98\\": {
        \\"container_access_type\\": \\"private\\",
        \\"name\\": \\"my-bucket-c8045fcc\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\"
      }
    }
  }
}"
`;

exports[`create a bucket 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Default": Object {
            "children": Object {
              "ResourceGroup": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.resourceGroup.ResourceGroup",
                  "version": "5.0.1",
                },
                "id": "ResourceGroup",
                "path": "root/Default/ResourceGroup",
              },
              "StorageAccount": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.storageAccount.StorageAccount",
                  "version": "5.0.1",
                },
                "id": "StorageAccount",
                "path": "root/Default/StorageAccount",
              },
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "azure": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.provider.AzurermProvider",
                  "version": "5.0.1",
                },
                "id": "azure",
                "path": "root/Default/azure",
              },
              "my_bucket": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Bucket": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-azurerm.storageContainer.StorageContainer",
                      "version": "5.0.1",
                    },
                    "id": "Bucket",
                    "path": "root/Default/my_bucket/Bucket",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`create multiple buckets 1`] = `
"{
  \\"resource\\": {
    \\"azurerm_resource_group\\": {
      \\"root_ResourceGroup_72A9AFB6\\": {
        \\"location\\": \\"East US\\",
        \\"name\\": \\"Default-c82bf964\\"
      }
    },
    \\"azurerm_storage_account\\": {
      \\"root_StorageAccount_3B92EC74\\": {
        \\"account_replication_type\\": \\"LRS\\",
        \\"account_tier\\": \\"Standard\\",
        \\"location\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.location}\\",
        \\"name\\": \\"defaultc82bf964\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.name}\\"
      }
    },
    \\"azurerm_storage_container\\": {
      \\"root_mybucket2_Bucket_C2147F5F\\": {
        \\"container_access_type\\": \\"private\\",
        \\"name\\": \\"my-bucket2-c87f4817\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\"
      },
      \\"root_mybucket_Bucket_10512A98\\": {
        \\"container_access_type\\": \\"private\\",
        \\"name\\": \\"my-bucket-c8045fcc\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\"
      }
    }
  }
}"
`;

exports[`create multiple buckets 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Default": Object {
            "children": Object {
              "ResourceGroup": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.resourceGroup.ResourceGroup",
                  "version": "5.0.1",
                },
                "id": "ResourceGroup",
                "path": "root/Default/ResourceGroup",
              },
              "StorageAccount": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.storageAccount.StorageAccount",
                  "version": "5.0.1",
                },
                "id": "StorageAccount",
                "path": "root/Default/StorageAccount",
              },
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "azure": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.provider.AzurermProvider",
                  "version": "5.0.1",
                },
                "id": "azure",
                "path": "root/Default/azure",
              },
              "my_bucket": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Bucket": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-azurerm.storageContainer.StorageContainer",
                      "version": "5.0.1",
                    },
                    "id": "Bucket",
                    "path": "root/Default/my_bucket/Bucket",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
              "my_bucket2": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Bucket": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-azurerm.storageContainer.StorageContainer",
                      "version": "5.0.1",
                    },
                    "id": "Bucket",
                    "path": "root/Default/my_bucket2/Bucket",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket2",
                "path": "root/Default/my_bucket2",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
